--- a/contact.html
+++ b/contact.html
@@ -33,8 +33,8 @@
                 
                 <ul class="nav navbar-nav navbar-right">
                         <li><a href="index.html">About</a></li>
-                        <li><a href="Portfolio.html">Portfolio</a></li>
-                        <li><a href="Contact.html">Contact</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                 </nav>
                 <div class="container">
                 <div class="row">
