--- a/portfolio.html
+++ b/portfolio.html
@@ -98,6 +98,13 @@
                                         <h2> Jewel Game</h2>
                                     </a>
                                 </div>
+                                <div class = "col-md-4">
+                                    <a href = "https://troykrupinski.github.io/GifTastic/">
+                                        <img src = "https://d1qb2nb5cznatu.cloudfront.net/startups/i/271584-dbab3d09fb8aba2827f06c9020248151-medium_jpg.jpg?buster=1423844699" height = "200" width = "200">
+                                        <h2>Gif Search</h2>
+                                    </a>
+                                   
+                                </div>
 
         </div>
     
